--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "clipboard-lite",
   "version": "1.0.0",
   "description": "Easily copy text to the clipboard",
+  "keywords": ["clipboard"],
   "browser": "index.js",
   "author": {
     "name": "Ebben Feagan",
