--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "browser": "index.js",
   "author": {
     "name": "Ebben Feagan",
-    "email": "ebben.feagan@gmail.com",
+    "email": "ebben@hmc-soft.com",
     "url": "https://thebrainernet.com"
   },
   "license": "ISC",
